<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainID"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/enter_email"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:hint="Enter email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.277" />

    <EditText
        android:id="@+id/enter_password"
        android:layout_width="278dp"
        android:layout_height="54dp"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.397" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="157dp"
        android:layout_height="71dp"
        android:fontFamily="cursive"
        android:text="SIGN IN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.694" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="156dp"
        android:layout_height="76dp"
        android:fontFamily="cursive"
        android:text="Register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.91" />

    <Button
        android:id="@+id/forgotPassword"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="166dp"
        android:layout_height="60dp"
        android:layout_marginStart="113dp"
        android:layout_marginLeft="113dp"
        android:layout_marginEnd="114dp"
        android:layout_marginRight="114dp"
        android:layout_marginBottom="4dp"
        android:background="#00000000"
        android:text="Forgot Password"
        android:textColor="#000000"
        android:textSize="14sp"
        app:backgroundTint="#00000000"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_password"
        app:layout_constraintVertical_bias="0.33"
        app:rippleColor="#FFFFFF" />

    <ImageView
        android:id="@+id/socialGrubLogo_horizontalID"
        android:layout_width="332dp"
        android:layout_height="99dp"
        app:layout_constraintBottom_toTopOf="@+id/enter_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sgtitlelogo" />

</androidx.constraintlayout.widget.ConstraintLayout>